# ark_hook

./: debug.bat  思路  需求
app/: build.gradle.kts
app/src/androidTest/java/com/kr/test/: ExampleInstrumentedTest.java
app/src/main/: CLAUDE.md
app/src/main/cpp/: ArgsConverter.cpp  ArgsConverter.h  CMakeLists.txt  Hook.cpp  Hook.h  HookInterface.h  IHook.cpp  IHook.h  Trampline.S  art.cpp  art.h  native-lib.cpp
app/src/main/java/com/kr/test/: CFoo.java  IHookCallback.java  MainActivity.java
app/src/main/res/layout/: activity_main.xml
app/src/test/java/com/kr/test/: ExampleUnitTest.java
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
